--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "src/main.ts",
-        "use": "@vercel/node"
-      }
-    ],
+    "builds": [{ "src": "src/main.ts", "use": "@vercel/node" }],
     "routes": [
       {
         "src": "/(.*)",
@@ -14,10 +9,17 @@
           "GET",
           "POST",
           "PUT",
-          "PATCH",
-          "DELETE"
-        ]
+          "DELETE",
+          "OPTIONS",
+          "PATCH"
+        ],
+        "headers": {
+          "Access-Control-Allow-Origin": "*",
+          "Access-Control-Allow-Methods": "GET,POST,PUT,PATCH,DELETE,OPTIONS",
+          "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version",
+          "Access-Control-Allow-Credentials": "true"
+        }
       }
+  
     ]
   }
-  
