--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.31.0",
     "cookie-parser": "^1.4.6",
     "helmet": "^5.1.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -49,6 +51,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
